# MACS

./: .gitmodules  CMakeLists.txt  README.md  electron-builder.json5  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
addressing/: CMakeLists.txt
addressing/lib/: CMakeLists.txt
addressing/src/: CMakeLists.txt
addressing/src/module/: CMakeLists.txt  module.cpp
electron/main/: index.ts
electron/preload/: index.ts
i2c_working/: CMakeLists.txt  i2c_device.cpp  i2c_potentiometer.cpp  i2c_worker.cpp
i2c_working/lib/: CMakeLists.txt
i2c_working/lib/i2c_device/: LICENSE
i2c_working/lib/i2c_device/include/: i2c_device.h
i2c_working/lib/pico_pio_usb/examples/host_hid_to_device_cdc/: CMakeLists.txt
i2c_working/queen/: CMakeLists.txt  i2cqueen.cpp
i2c_working/src/: CMakeLists.txt
i2c_working/src/queen/: CMakeLists.txt  i2cqueen.cpp
i2c_working/src/queen/include/: usb_descriptors.h
i2c_working/src/worker/: CMakeLists.txt  i2cworker.cpp
i2c_working/worker/: CMakeLists.txt  i2cworker.cpp
i2cq/: CMakeLists.txt  main.cpp
i2cw/: CMakeLists.txt  Wire.cpp  Wire.h  main.cpp
include/: common.h  coordinates.h
lib/: CMakeLists.txt
lib/i2c_device/: CMakeLists.txt  i2c_base.cpp  i2c_device.cpp  i2c_modules.cpp
lib/pwm_pio/: CMakeLists.txt  Pwm.cpp  Pwm.pio  PwmIn.cpp
lib/pwm_pio/include/: Pwm.h  PwmIn.h
lib/usb/: CMakeLists.txt
lib/usb/demo/: demo.cpp  demo.h
lib/usb/include/: CMakeLists.txt  Module.h  usbTask.h
lib/usb/include/payload/: IPayload.h  PayloadFactory.h
lib/usb/include/queue/: IReportQueueController.h  IReportQueueHandler.h  ReportQueueFactory.h  ReportQueueSingleton.h
lib/usb/include/types/: payload_types.h  report_ids.h
lib/usb/src/: CMakeLists.txt  usbTask.cpp
lib/usb/src/module/: Module.cpp  Module.h
lib/usb/src/payload/: AnalogPayload.cpp  AnalogPayload.h  DigitalPayload.cpp  DigitalPayload.h  JoystickPayload.cpp  JoystickPayload.h  Payload.cpp  Payload.h  PayloadFactory.cpp
lib/usb/src/queue/: ReportQueueController.cpp  ReportQueueController.h  ReportQueueHandler.cpp  ReportQueueHandler.h  ReportQueueSingleton.cpp
lib/usb/src/report_queue/: BufferedReportQueue.cpp  MulticoreFifoReportQueue.h  ReportQueueFactory.cpp
lib/usb/src/report_queue/handler/: ReportQueueHandler.cpp  ReportQueueHandler.h
lib/usb/src/usb_stack/: constants.h  report_descriptor.h  report_types.h  tusb_config.h  usb_descriptors.h
pwm_test/: CMakeLists.txt  PwmIn.cpp  PwmIn.h  pwm_test.cpp
src/: App.jsx  App.scss  CMakeLists.txt  InputDraggableCard.jsx  index.scss  main.tsx  theme.js
src/central_hub/: CMakeLists.txt
src/central_hub/include/: hub_utils.h  i2c_hub.h  positionManager.h
src/central_hub/lib/: CMakeLists.txt
src/central_hub/lib/usb/: CMakeLists.txt  license.txt
src/central_hub/lib/usb/src/: CMakeLists.txt  usbTask.cpp  usbTask.h
src/central_hub/lib/usb/src/demo/: demo.cpp  demo.h  demoUtils.cpp  demoUtils.h  gpioUtils.cpp  gpioUtils.h
src/central_hub/lib/usb/src/module/: Module.cpp  Module.h  ModuleUpdateHandler.h  ModuleUpdateHandlerImpl.h
src/central_hub/lib/usb/src/payload/: ButtonPayload.h  DigitalPayload.cpp  DpadPayload.h  JoystickPayload.cpp  JoystickPayload.h  PayloadFactory.h
src/central_hub/lib/usb/src/report_queue/: BufferedReportQueue.cpp  BufferedReportQueue.h  IReportQueue.h  MulticoreFifoReportQueue.cpp  MulticoreFifoReportQueue.h  PicoQueueReportQueue.cpp  PicoQueueReportQueue.h
src/central_hub/lib/usb/src/report_queue/controller/: ForceableReportQueueController.cpp  ForceableReportQueueController.h  IForceableReportQueueController.h  IReportQueueController.h  ReportQueueController.cpp  ReportQueueController.h
src/central_hub/lib/usb/src/report_queue/forceable/: ForceableReportQueue.cpp  ForceableReportQueue.h  IForceableReportQueue.h
src/central_hub/lib/usb/src/report_queue/handler/: IReportQueueHandler.h  LosslessReportQueueHandler.cpp  LosslessReportQueueHandler.h  ReportQueueHandler.cpp  ReportQueueHandler.h
src/central_hub/lib/usb/src/types/: coordinates.h  payload_types.h  report_ids.h  report_types.h
src/central_hub/lib/usb/src/usb_stack/: report_descriptor.h  usb_descriptors.c
src/central_hub/lib/usb/src/util/: PicoTimer.h  usbTiming.cpp  usbTiming.h  usbUtil.cpp  usbUtil.h
src/central_hub/src/: central_hub.cpp  i2c_hub.cpp  positionManager.cpp
src/modules/: CMakeLists.txt
src/modules/include/: i2c_module.h  inputs.h  mod_utils.h
src/modules/src/: i2c_module.cpp  inputs.cpp  mod_utils.cpp  module.cpp
usb_comms_alt/: CMakeLists.txt
usb_comms_alt/src/: CMakeLists.txt  ReportQueueController.cpp  ReportQueueController.h  ReportQueueHandler.cpp  ReportQueueHandler.h  USBController.cpp  USBController.h  main.c  modules.cpp  modules.h  report_definitions.h  report_descriptor.h  report_queue.c  report_queue.h  report_queue_handler.c  report_queue_handler.h  report_types.h  reports.h  tusb_config.h  usb.cpp  usb.h  usbTask.cpp  usbTask.h  usb_controller.c  usb_controller.h  usb_descriptors.c  usb_descriptors.h
usb_comms_alt/src/demo/: demo.cpp  demo.h  demoUtils.cpp  demoUtils.h  demo_utils.cpp  demo_utils.h
usb_comms_alt/src/module/: Module.cpp  Module.h  ModuleImpl.h  ModuleUpdateHandlerImpl.h
usb_comms_alt/src/payload/: ButtonPayload.cpp  ButtonPayload.h  DpadPayload.cpp  DpadPayload.h  IPayload.h  JoystickPayload.cpp  JoystickPayload.h
usb_comms_alt/src/report_queue/: BufferedReportQueue.cpp  BufferedReportQueue.h  IReportQueue.h  MulticoreFifoReportQueue.cpp  MulticoreReportQueue.cpp  MulticoreReportQueue.h  PicoQueueReportQueue.cpp  PicoQueueReportQueue.h
usb_comms_alt/src/report_queue/controller/: ReportQueueController.cpp
usb_comms_alt/src/report_queue/handler/: ReportQueueHandler.cpp
usb_comms_alt/src/types/: payload_types.h  report_ids.h  report_types.h
usb_comms_alt/src/usb_stack/: device_callbacks.c  hid_callbacks.c  report_descriptor.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
usb_comms_alt/src/util/: PicoTimer.cpp  demo_utils.c  demo_utils.h  hashmap.c  hashmap.h  report_queue.c  report_queue.h
(+12 files in other folders)
